# dindong-ditch

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
assets/: buddyin.pcm  fart.pcm
src/: main.rs
