[package]
name = "dingdong-ditch"
version = "0.1.0"
edition = "2021"
description = "Silence Zoom's dingdong doorbell chime — or replace it with a fart or the AIM buddy-in sound"

[[bin]]
name = "dingdong-ditch"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
silk-rs = "0.2.0"
